--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.100"
+async-trait = "0.1.89"
 axum = { version = "0.8.6", features = ["tracing", "macros"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 http-body-util = "0.1.3"
