--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 anyhow = "1.0.100"
 async-trait = "0.1.89"
 axum = { version = "0.8.6", features = ["tracing", "macros"] }
+axum-extra = { version = "0.10.3", features = ["typed-header"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 http-body-util = "0.1.3"
+jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
