--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ axum-extra = { version = "0.10.3", features = ["typed-header"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 http-body-util = "0.1.3"
 jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
+prost = "0.14.1"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite", "uuid"] }
-tokio = { version = "1.48.0", features = ["full"] }
+thiserror = "2.0.17"
+tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
+tonic = "0.14.2"
+tonic-prost = "0.14.2"
 tower = { version = "0.5.2", features = ["util"] }
 tower-http = { version = "0.6.6", features = ["trace"] }
 tracing = "0.1.41"
@@ -22,3 +26,6 @@ tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
 utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
 uuid = { version = "1.18.1", features = ["serde", "v4"] }
+
+[build-dependencies]
+tonic-prost-build = "0.14.2"
